# deepseek-web-api

./: .gitignore  API.md  README.md  README.中文.md  config.toml.example  main.py  pyproject.toml
docs/: CORE.md
src/deepseek_web_api/: __init__.py
src/deepseek_web_api/api/: routes.py
src/deepseek_web_api/api/openai/: __init__.py  chat_completions.py  models.py
src/deepseek_web_api/api/openai/chat_completions/: messages.py  route.py  service.py  tools.py
src/deepseek_web_api/core/: __init__.py  auth.py  config.py  logger.py  pow.py  pow_service.py  server_security.py  session_store.py
tests/api/: test_routes.py
tests/api/test_chat_completions/: test_messages.py  test_route.py  test_tools.py
tests/core/: test_config_auth.py  test_server_security.py
tests/smoke/: test_core.py  test_v0_api.py  test_v1_chat_completions.py
