[project]
name = "deepseek-web-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
    "wasmtime>=42.0.0",
]

[dependency-groups]
dev = [
    "openai>=2.29.0",
    "ruff>=0.15.7",
]
